k8s.tf
provider "kubernetes" {
  host                   = data.aws_eks_cluster.cluster.endpoint
  token                  = data.aws_eks_cluster_auth.cluster.token
  cluster_ca_certificate = base64decode(data.aws_eks_cluster.cluster.certificate_authority.0.data)
}

provider "helm" {
  kubernetes {
    host                   = data.aws_eks_cluster.cluster.endpoint
    token                  = data.aws_eks_cluster_auth.aws_iam_authenticator.token
    cluster_ca_certificate = base64decode(data.aws_eks_cluster.cluster.certificate_authority.0.data)
  }
}

# K8S Service Account
resource "kubernetes_service_account" "admin_user" {
  metadata {
    name      = "admin-user"
    namespace = "kube-system"
  }
}

# K8S RBAC
resource "kubernetes_cluster_role_binding" "admin_rbac" {
  metadata {
    name = "admin-user"
  }

  role_ref {
    api_group = "rbac.authorization.k8s.io"
    kind      = "ClusterRole"
    name      = "cluster-admin"
  }

  subject {
    kind      = "ServiceAccount"
    name      = "admin-user"
    namespace = "kube-system"
  }
}

# Deploy ALB Ingress Controller
# Note: This is just a basic module deployment. In an actual production environment,
# this would be more thoughtfully planned out.
module "load_balancer_controller" {
  source = "git::https://github.com/DNXLabs/terraform-aws-eks-lb-controller.git"

  cluster_identity_oidc_issuer     = module.rm_eks_cluster.cluster_oidc_issuer_url
  cluster_identity_oidc_issuer_arn = module.rm_eks_cluster.oidc_provider_arn
  cluster_name                     = module.rm_eks_cluster.cluster_id

  helm_chart_version = "1.4.2"
}
